# TRAKSHYA-WAF

./: .dockerignore  .editorconfig  .firebaserc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  KUBERNETES.md  LICENSE  Makefile  README.md  SECURITY.md  build-desktop.sh  build-local.sh  dashboard.html  docker-compose.stack.yml  docker-compose.yml  index.html  install.sh  kalki-desktop.py  kalki.py  main.py  openapi.yml  render.yaml  requirements-local.txt  requirements.txt  schema.sql  server.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  compose-healthgate.yml  dependency-scan.yml  deploy-dashboard.yml  docker-publish.yml  openapi-validation.yml  regression.yml  release.yml  validate.yml  waf-ci.yml
app/: main.js  package.json  preload.js  start.sh
app/renderer/: dashboard.html  titlebar.css  titlebar.html
app/scripts/: autostart.sh
backend/waf/api/: routes.py
backend/waf/db/: sqlite.py
c/: CMakeLists.txt  Dockerfile
c/include/: kalki.h  trakshya.h
c/src/: main.c  utils.c
c/src/active_response/: engine.c  iptables.c  posture.c  process.c
c/src/fim/: engine.c  hasher.c
c/src/hids/: engine.c  parser.c
c/src/sca/: checks.c  engine.c
c/src/vuln/: cve_db.c  engine.c
c/tests/: CMakeLists.txt
config/: kalki.yaml  trakshya.yaml
dashboard/: Dockerfile
datadog/: dashboard.json
datadog/conf.d/openmetrics.d/: conf.yaml
datadog/monitors/: waf-monitors.json
deploy/: PRODUCTION.md  production-setup.sh
deploy/nginx/: trakshya-dashboard.conf
deploy/systemd/: trakshya-api.service  trakshya-dashboard.service  trakshya-proxy.service
dev-certs/: localhost.crt  localhost.csr  localhost.ext  localhost.key  trakshya-ca.crt  trakshya-ca.key  trakshya-ca.srl
frontend/: dashboard.html
go/: Dockerfile  go.mod  go.sum
go/cmd/kalki-api/: main.go
go/cmd/trakshya-api/: main.go
go/internal/agents/: handler.go
go/internal/api/: agents.go  config.go  geo.go  incidents.go  management.go  router.go  vapt.go  vulns.go  websocket.go
go/internal/db/: duckdb.go  postgres.go  sqlite.go  store.go  vapt.go  vulns.go
go/internal/scanner/: scanner.go  vapt.go
go/internal/siem/: engine.go
go/internal/siem/rules/: brute_force.go  data_exfil.go  port_scan.go  scan_detect.go  shell_activity.go  sqli_wave.go  xss_wave.go
go/internal/telemetry/: metrics.go  tracing.go
go/internal/webhooks/: dispatcher.go
go/internal/ws/: sse.go
go/pkg/models/: types.go
helm/trakshya-waf/: .helmignore  Chart.yaml  values.yaml
helm/trakshya-waf/templates/: 00-namespace.yaml  01-secret.yaml  02-pvc.yaml  03-dashboard.yaml  04-proxy.yaml  05-api.yaml  06-dashboard-svc.yaml  07-proxy-svc.yaml  08-api-svc.yaml
k8s/: 00-namespace.yaml  01-configmap.yaml  02-secret.yaml  03-pvc.yaml  04-dashboard.yaml  05-proxy.yaml  06-api.yaml  07-dashboard-svc.yaml  08-proxy-svc.yaml  09-api-svc.yaml
landing/: index.html  scripts.js  start.ps1  start.sh  styles.css
netlify/functions/: api.py
npm-package/: install.js  package-lock.json  package.json
rust/: Cargo.toml  Dockerfile
rust/kalki-circuit-breaker/: Cargo.toml
rust/kalki-circuit-breaker/src/: lib.rs
rust/kalki-geoip/: Cargo.toml
rust/kalki-geoip/src/: lib.rs
rust/kalki-jwt/: Cargo.toml
rust/kalki-jwt/src/: lib.rs
rust/kalki-proxy/: Cargo.toml
rust/kalki-proxy/src/: api.rs  config.rs  inspector.rs  main.rs  proxy.rs
rust/kalki-proxy/src/middleware/: mod.rs
rust/kalki-rate-limiter/: Cargo.toml
rust/kalki-rate-limiter/src/: lib.rs
rust/kalki-rules/: Cargo.toml
rust/kalki-rules/src/: models.rs
rust/kalki-rules/src/rules/: lfi.rs  mod.rs  path_traversal.rs  rfi.rs  sqli.rs  ssti.rs  xss.rs  xxe.rs
rust/krsna-circuit-breaker/: Cargo.toml
rust/krsna-geoip/: Cargo.toml
rust/krsna-jwt/: Cargo.toml
rust/krsna-proxy/: Cargo.toml  Dockerfile
rust/krsna-proxy/migrations/: 001_initial_schema.sql  20250115000001_initial_schema.sql
rust/krsna-proxy/src/: api.rs  config.rs  db.rs  inspector.rs  main.rs  proxy.rs
rust/krsna-rate-limiter/: Cargo.toml
rust/krsna-rules/: Cargo.toml
rust/krsna-rules/src/: engine.rs  lib.rs
rust/trakshya-circuit-breaker/: Cargo.toml
rust/trakshya-geoip/: Cargo.toml
rust/trakshya-geoip/src/: lib.rs
rust/trakshya-jwt/: Cargo.toml
rust/trakshya-jwt/src/: lib.rs
rust/trakshya-proxy/: Cargo.toml  Dockerfile
rust/trakshya-proxy/migrations/: 001_initial_schema.sql  20250115000001_initial_schema.sql
rust/trakshya-proxy/src/: api.rs  config.rs  db.rs  gateway.rs  inspector.rs  main.rs  proxy.rs
rust/trakshya-proxy/src/middleware/: mod.rs
rust/trakshya-rate-limiter/: Cargo.toml
rust/trakshya-rate-limiter/src/: lib.rs
rust/trakshya-rules/: Cargo.toml
rust/trakshya-rules/src/: engine.rs  lib.rs
rust/trakshya-rules/src/rules/: cmdi.rs  mod.rs
scripts/: build-all.sh  generate-dev-certs.sh  init-db.sql  install.sh  refresh-cmake.py  regression.py  run-all.sh  run-smoke.sh  smoke-test.py  test-all.sh  trakshya-ascii.sh
