[workspace]
members = [
    "trakshya-proxy",
    "trakshya-rules",
    "trakshya-rate-limiter",
    "trakshya-circuit-breaker",
    "trakshya-geoip",
    "trakshya-jwt",
]

[workspace.package]
edition = "2021"
version = "1.0.0"
license = "MIT"
repository = "https://github.com/Pradyu12/TRAKSHYA-WAF"
documentation = "https://github.com/Pradyu12/TRAKSHYA-WAF#readme"
homepage = "https://github.com/Pradyu12/TRAKSHYA-WAF"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
