[package]
name = "kalki-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
kalki-rules = { path = "../kalki-rules" }
kalki-rate-limiter = { path = "../kalki-rate-limiter" }
kalki-circuit-breaker = { path = "../kalki-circuit-breaker" }
kalki-geoip = { path = "../kalki-geoip" }
kalki-jwt = { path = "../kalki-jwt" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
