[package]
name = "trakshya-geoip"
version.workspace = true
edition.workspace = true
description = "MaxMind GeoIP2 integration for country-based IP blocking and geolocation"
repository = "https://github.com/Pradyu12/TRAKSHYA-WAF"
documentation = "https://github.com/Pradyu12/TRAKSHYA-WAF#readme"
homepage = "https://github.com/Pradyu12/TRAKSHYA-WAF"
categories = ["network-programming", "data-processing"]
keywords = ["geoip", "maxmind", "geolocation", "ip-blocking", "country-blocking"]
license = "MIT"

[dependencies]
serde.workspace = true
maxminddb = "0.24"
tracing.workspace = true
thiserror.workspace = true
