[package]
name = "trakshya-proxy"
version.workspace = true
edition.workspace = true
description = "High-performance WAF reverse proxy with attack detection, rate limiting, and circuit breaking"
repository = "https://github.com/Pradyu12/TRAKSHYA-WAF"
documentation = "https://github.com/Pradyu12/TRAKSHYA-WAF#readme"
homepage = "https://github.com/Pradyu12/TRAKSHYA-WAF"
categories = ["network-programming", "security", "web-programming"]
keywords = ["waf", "firewall", "proxy", "reverse-proxy", "rate-limiting", "circuit-breaker"]
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
trakshya-rules = { path = "../trakshya-rules" }
trakshya-rate-limiter = { path = "../trakshya-rate-limiter" }
trakshya-circuit-breaker = { path = "../trakshya-circuit-breaker" }
trakshya-geoip = { path = "../trakshya-geoip" }
trakshya-jwt = { path = "../trakshya-jwt" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
clap = "4.6"
clap_builder = "4.6"
clap_derive = "4.6"

# Database
duckdb = { version = "0.10", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
regex = "1"
urlencoding = "2"
