[package]
name = "trakshya-rate-limiter"
version.workspace = true
edition.workspace = true
description = "Token bucket rate limiter with sliding window and burst support"
repository = "https://github.com/Pradyu12/TRAKSHYA-WAF"
documentation = "https://github.com/Pradyu12/TRAKSHYA-WAF#readme"
homepage = "https://github.com/Pradyu12/TRAKSHYA-WAF"
categories = ["algorithms", "network-programming"]
keywords = ["rate-limiting", "token-bucket", "throttling", "dos-protection"]
license = "MIT"

[dependencies]
tokio.workspace = true
dashmap = "5"
serde.workspace = true
serde_json.workspace = true
